--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
+PyMuPDF==1.24.2
 databricks-sdk==0.26.0
 databricks-vectorsearch==0.22
 langchain==0.1.12
 llama-index==0.10.16
 mlflow==2.10.1
-# pandas==1.5.3
+pandas==1.5.3
 pydantic==1.10.9
-# pyspark==3.5.1
+pyspark==3.5.1
 transformers==4.36.0
-unstructured[all-docs]==0.10.30
