--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,9 @@
 
 DATABRICKS_HOST=https://WORKSPACE.databricks.com
 DATABRICKS_TOKEN=YOUR_API_TOKEN
+
+DB_HOST=
+DB_PORT=5432
+DB_NAME=sea
+DB_USER=sea
+DB_PASSWORD=
