--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==5.0.4
 PyMuPDF==1.24.2
 databricks-sdk==0.26.0
 databricks-vectorsearch==0.22
+django-cors-headers==4.3.1
 langchain==0.1.12
 llama-index==0.10.16
 mlflow==2.10.1
