--- a/sea_app/package.json
+++ b/sea_app/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "@mdi/font": "7.4.47",
         "dompurify": "^3.1.2",
+        "js-cookie": "^3.0.5",
         "marked": "^12.0.2",
         "pinia": "^2.1.7",
         "vue": "^3.4.21",
@@ -25,6 +26,7 @@
         "@rushstack/eslint-patch": "^1.8.0",
         "@tsconfig/node20": "^20.1.4",
         "@types/dompurify": "^3.0.5",
+        "@types/js-cookie": "^3.0.6",
         "@types/node": "^20.12.5",
         "@vitejs/plugin-vue": "^5.0.4",
         "@vue/eslint-config-prettier": "^9.0.0",
