--- a/sea_app/package.json
+++ b/sea_app/package.json
@@ -19,6 +19,7 @@
         "js-cookie": "^3.0.5",
         "marked": "^12.0.2",
         "pinia": "^2.1.7",
+        "uuid": "^9.0.1",
         "vue": "^3.4.21",
         "vue-router": "^4.3.0",
         "vue3-pdf-app": "^1.0.3",
@@ -30,6 +31,7 @@
         "@types/dompurify": "^3.0.5",
         "@types/js-cookie": "^3.0.6",
         "@types/node": "^20.12.5",
+        "@types/uuid": "^9.0.8",
         "@vitejs/plugin-vue": "^5.0.4",
         "@vue/eslint-config-prettier": "^9.0.0",
         "@vue/eslint-config-typescript": "^13.0.0",
