--- a/.env.sample
+++ b/.env.sample
@@ -12,3 +12,7 @@ DB_PASSWORD=
 
 SECRET_KEY=DJANGO_SECRET_KEY
 DOCUMENT_DIR=PATH_TO_YOUR_DOCUMENTS
+
+ADMIN_USER_NAME=admin
+ADMIN_USER_EMAIL=admin@example.com
+ADMIN_USER_PASSWORD=sea12345678
